--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -6,6 +6,7 @@
         </a>
         <div >
             <button type="button" th:onclick="|window.location.href='@{/choice-register}'|">Registro</button>
+            <button type="button" th:onclick="|window.location.href='@{/student/my-candidatures}'|">Minhas candidaturas</button>
         </div>
     </div>
     
