--- a/src/main/resources/templates/fragments/headfiles.html
+++ b/src/main/resources/templates/fragments/headfiles.html
@@ -10,12 +10,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fugaz+One&display=swap" rel="stylesheet">
-    
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    
-    
-    <link rel="stylesheet" th:href="@{/styles/theme.css}"/>
- <!--<link rel="stylesheet" th:href="@{/styles/main.css}" /> -->
+    <link rel="stylesheet" th:href="@{/css/style.css}" />
+   
     <link rel="icon" th:href="@{/imgs/icons/incruise-icon.ico}" type="image/x-icon">
     <title th:text="${title} "></title>
     
