--- a/src/main/resources/templates/companies/info.html
+++ b/src/main/resources/templates/companies/info.html
@@ -92,15 +92,28 @@
     </section>
     <section class="info-section" id="oportunity-section">
         <h2 class="section-title"> Oportunidades </h2>
-
-        <div th:each="opportunity : ${company.opportunityList}">
-            <div class="flex row" th:insert="fragments/opportunityCard :: opportunityCard(${opportunity})">
+        
+        <div class="flex row" >
+            <div class="opportunity-card" th:each="internshipOffer :${company.vacancyList}">
+                <h2 class="topic-title">[[${internshipOffer.principalActivity}]]</h2>
+                
+                <p><span class="bolder">Remuneração: </span>
+                    <span>[[${internshipOffer.remunerationValue}]]</span>
+                </p>
+                
+                <p><span class="bolder">Quantidade de Vagas: </span>
+                    <span>[[${internshipOffer.quanty}]] Vagas</span>
+                </p>
+                <p><span class="bolder">Carga Horária: </span>
+                    <span>[[${internshipOffer.workloadSemanal}]]</span></p>
+                    <p>
+                        
             </div>
 
         </div>
 
     </section>
-
+    
 </body>
 
 </html>
