--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,4 +1,4 @@
-<footer>
+<footer class="py-3 my-4">
 <!-- Remove the container if you want to extend the Footer to full width. -->
 <div class="container my-5">
     <!-- Footer -->
