--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -5,8 +5,9 @@
             <span class="logo-font">Incruise</span>
         </a>
         <div >
-            <button type="button" th:onclick="|window.location.href='@{/choice-register}'|">Registro</button>
-            <button type="button" th:onclick="|window.location.href='@{/student/my-candidatures}'|">Minhas candidaturas</button>
+            <button class="btn btn-primary" type="button" th:onclick="|window.location.href='@{/choice-register}'|">Registro</button>
+            <button class="btn btn-secondary" type="button" th:onclick="|window.location.href='@{/student/my-candidatures}'|">Minhas candidaturas</button>
         </div>
+        
     </div>
 </nav>
