--- a/src/main/resources/templates/offers/form.html
+++ b/src/main/resources/templates/offers/form.html
@@ -2,7 +2,7 @@
 <html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Cadastro de Oferta de Estágio</title>
+    <meta th:insert="~{/fragments/headfiles(title='Cadastrar Ofertas')}">
     <link rel="shortcut icon" type="imagex/png" th:href="@{/imgs/logo.png}">
     <link rel="stylesheet" th:href="@{/styles/form.css}">
 </head>
