refactor: removendo campo desnecessário

--- a/src/main/resources/templates/offers/form.html
+++ b/src/main/resources/templates/offers/form.html
@@ -42,9 +42,9 @@
 
             <div class="form-group">
                 <label for="company">Empresa:</label>
-                <select id="company" th:field="*{companyResponsable}" required>
+                <select id="company" name="company" required>
                     <option value="">Selecione uma empresa</option>
-                    <option th:each="company : ${companies}" th:value="${company}" th:text="${company.fantasyName}"></option>
+                    <option th:each="company : ${companies}" th:value="${company.id}" th:text="${company.fantasyName}"></option>
                 </select>
             </div>
 
