--- a/src/main/resources/templates/offers/application.html
+++ b/src/main/resources/templates/offers/application.html
@@ -4,7 +4,7 @@
 <head>
     <meta th:insert="~{/fragments/headfiles(title='Candidatar-se - ${offer.principalActivity}')}">
     <link rel="stylesheet" th:href="@{/styles/candidature.css}">
-</head
+</head>
 
 <body class="application-screen">
 
