--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-dark" style="background: #498CA9;" th:fragment="header">
     <div class="container-fluid">
-        <a class="navbar-brand" th:href="@{/incruise}">
+        <a class="navbar-brand" th:href="@{/}">
             <img th:src="@{/imgs/logo.png}" alt="" width="30" height="24" class="d-inline-block align-text-top">
             <span class="logo-font">Incruise</span>
         </a>
