--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -79,6 +79,9 @@
 
     <footer th:replace="~{/fragments/footer}">
     </footer>
+
+    <div th:replace="~{/fragments/scripts}">
+    </div>
 </body>
 
 </html>
