--- a/src/main/resources/templates/students/edit.html
+++ b/src/main/resources/templates/students/edit.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Editar Aluno</title>
-  <link rel="shortcut icon" type="imagex/png" th:href="@{/imgs/logo.png}">
+  <meta th:insert="~{/fragments/headfiles(title='[[${student.name}]]')}">
 
 </head>
 <body>
+  
+<header>
+  <div th:replace="~{/fragments/header}"></div>
+</header>
+
 <h1>Editar Aluno</h1>
 <form th:action="@{/student/edit/{id}(id=${student.id})}" method="post">
   <input type="hidden" th:field="*{id}"/>
@@ -17,5 +19,6 @@
   Curso: <input type="text" th:field="*{course}"/><br/><br/>
   <input type="submit" value="Salvar">
 </form>
+<div th:replace="~{/fragments/scripts}"></div>
 </body>
 </html>
