--- a/src/main/resources/templates/fragments/headfiles.html
+++ b/src/main/resources/templates/fragments/headfiles.html
@@ -15,6 +15,7 @@
     
     
     <link rel="stylesheet" th:href="@{/styles/theme.css}"/>
+    <link rel="stylesheet" th:href="@{/styles/fragments/header.css}"/>
  <!--<link rel="stylesheet" th:href="@{/styles/main.css}" /> -->
     <link rel="icon" th:href="@{/imgs/icons/incruise-icon.ico}" type="image/x-icon">
     <title th:text="${title} "></title>
