--- a/src/main/resources/templates/offers/application.html
+++ b/src/main/resources/templates/offers/application.html
@@ -7,7 +7,10 @@
 </head>
 
 <body class="application-screen">
-
+    <header>
+        <div th:replace="~{/fragments/header}"></div>
+    </header>
+    
     <div class="application-container">
         <h1>Formulário de Candidatura</h1>
 
@@ -28,5 +31,7 @@
         </form>
     </div>
 
+    <div th:replace="~{/fragments/scripts}">
+    </div>
 </body>
 </html>
