--- a/src/main/resources/templates/offers/list.html
+++ b/src/main/resources/templates/offers/list.html
@@ -55,17 +55,9 @@
                                 <form th:action="@{apply/{id}(id=${offer.id})}" method="get">
                                     <input class="btn-action btn-apply" type="submit" value="Candidatar-se" />
                                 </form>
-                                <a th:href="@{find/{id}(id=${offer.id})}">
+                                <a th:href="@{info/{id}(id=${offer.id})}">
                                 Visualizar
                                 </a>
-
-                                <form th:action="@{/internshipOffer/apply/{id}(id=${offer.id})}" method="get">
-                                    <input class="btn-action btn-apply" type="submit" value="Candidatar-se" />
-                                </form>
-                                <form th:action="@{/internshipOffer/cancel/{id}(id=${offer.id})}" method="post">
-                                    <input type="hidden" name="_method" value="DELETE" />
-                                    <input class="input-delete" type="submit" value="Cancelar" />
-                                </form>
                             </div>
                         </td>
                     </tr>
@@ -73,6 +65,10 @@
             </table>
 
         </div>
+    </div>
+
+    
+    <div th:replace="~{/fragments/scripts}">
     </div>
 </body>
 
