--- a/src/main/resources/templates/students/list.html
+++ b/src/main/resources/templates/students/list.html
@@ -2,15 +2,15 @@
 <html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" th:href="@{/styles/list.css}">
-    <link rel="shortcut icon" type="imagex/png" th:href="@{/imgs/logo.png}">
-    <title>Estudantes</title>
+    <meta th:insert="~{/fragments/headfiles(title='Estudantes')}">
+
 </head>
 <body class="main-screen">
+    
+<header>
+    <div th:replace="~{/fragments/header}"></div>
+</header>
+
     <div class="card-component">
         <div class="card-content">
             <h1>Todos os estudantes cadastrados</h1>
@@ -49,5 +49,7 @@
             </table>
         </div>
     </div>
+    <div th:replace="~{/fragments/scripts}">
+
 </body>
 </html>
