--- a/src/main/resources/templates/system/not-found.html
+++ b/src/main/resources/templates/system/not-found.html
@@ -5,6 +5,10 @@
 
 </head>
 <body>
+    
+<header>
+    <div th:replace="~{/fragments/header}"></div>
+</header>
     <div class="container">
         <div class="row">
             <div class="col-md-12">
@@ -24,5 +28,7 @@
             </div>
         </div>
     </div>
+    <div th:replace="~{/fragments/scripts}">
+
 </body>
 </html>
